# dev-tut

./: .gitignore  imgui.ini  meson.build
src/: meson.build
src/core/: meson.build
src/core/gl/: gl_wrapper.cpp  gl_wrapper.h
src/core/graphics/: camera.cpp  camera.h  meson.build  window.cpp  window.h
src/core/system/: scene.cpp  scene.h
src/engine/: core.h  meson.build
src/engine/graphics/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  graphics.h  meson.build  mygui.cpp  mygui.h  object.cpp  object.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  stb.cpp  texture.cpp  texture.h  vao.cpp  vao.h
src/engine/runtime/: starter.cpp  starter.h
src/example/: main.cpp  main2.cpp  meson.build  world.cpp  world.h
src/shaders/: default_shaders.hh  meson.build  shader_to_header.py
src/shaders/default/: default_default.vert  meson.build  vertex.vert
